parser.output
Terminals unused in grammar

   TK_LIT_FALSE
   TK_LIT_TRUE
   TOKEN_ERRO


Rules useless in parser due to conflicts

    3 list_global_decl: global_decl


State 8 conflicts: 5 shift/reduce
State 44 conflicts: 1 reduce/reduce
State 56 conflicts: 1 shift/reduce
State 91 conflicts: 5 reduce/reduce
State 104 conflicts: 5 reduce/reduce
State 109 conflicts: 1 reduce/reduce
State 160 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: list_global_decl function_list
    2        | /* empty */

    3 list_global_decl: global_decl
    4                 | global_decl list_global_decl

    5 global_decl: declaration ';'
    6            | vector_decl ';'

    7 declaration: TK_PR_INT ':' TK_IDENTIFICADOR
    8            | TK_PR_FLOAT ':' TK_IDENTIFICADOR
    9            | TK_PR_BOOL ':' TK_IDENTIFICADOR
   10            | TK_PR_CHAR ':' TK_IDENTIFICADOR
   11            | TK_PR_STRING ':' TK_IDENTIFICADOR

   12 vector_decl: TK_PR_INT ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   13            | TK_PR_FLOAT ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   14 parameter: declaration

   15 parameter_list: parameter
   16               | parameter ',' parameter_list
   17               | /* empty */

   18 function_header: type ':' TK_IDENTIFICADOR '(' parameter_list ')'

   19 function_variables: declaration ';'
   20                   | declaration ';' function_variables
   21                   | /* empty */

   22 function_body: cmd_block

   23 function_list: function
   24              | function function_list

   25 function: function_header function_variables function_body

   26 cmd_block: '{' cmd_list '}'

   27 cmd_list: cmd ';'
   28         | cmd ';' cmd_list
   29         | /* empty */

   30 cmd: attrib
   31    | flux
   32    | input
   33    | output
   34    | return
   35    | cmd_block
   36    | call_function
   37    | /* empty */

   38 expr: primary_expression
   39     | function
   40     | arit_expr
   41     | log_expr
   42     | '(' expr ')'

   43 primary_expression: TK_IDENTIFICADOR
   44                   | term

   45 arit_expr: term
   46          | sum
   47          | sub
   48          | mult
   49          | div

   50 log_expr: and
   51         | or
   52         | le
   53         | ge
   54         | eq
   55         | ne
   56         | term '<' term
   57         | term '>' term

   58 and: term TK_OC_AND term

   59 or: term TK_OC_OR term

   60 le: term TK_OC_LE term

   61 ge: term TK_OC_GE term

   62 eq: term TK_OC_EQ term

   63 ne: TK_OC_NE term

   64 sum: term '+' term

   65 sub: term '-' term

   66 mult: term '*' term

   67 div: term '/' term

   68 term: TK_LIT_INT
   69     | TK_LIT_FLOAT
   70     | TK_LIT_CHAR
   71     | TK_IDENTIFICADOR
   72     | TK_IDENTIFICADOR '[' expr ']'

   73 attrib: TK_IDENTIFICADOR '=' expr
   74       | TK_IDENTIFICADOR '[' expr ']' '=' expr

   75 flux: TK_PR_IF '(' expr ')' TK_PR_THEN cmd
   76     | TK_PR_IF '(' expr ')' TK_PR_THEN cmd TK_PR_ELSE cmd
   77     | TK_PR_WHILE '(' expr ')' TK_PR_DO cmd
   78     | TK_PR_DO cmd TK_PR_WHILE '(' expr ')'

   79 input: TK_PR_INPUT TK_IDENTIFICADOR

   80 output: TK_PR_OUTPUT output_list

   81 output_list: output_element
   82            | output_element ',' output_list

   83 output_element: TK_LIT_STRING
   84               | arit_expr

   85 return: TK_PR_RETURN expr

   86 call_function: TK_IDENTIFICADOR '(' argument_list ')'

   87 argument_list: argument
   88              | argument ',' argument_list

   89 argument: term
   90         | /* empty */

   91 type: TK_PR_INT
   92     | TK_PR_FLOAT
   93     | TK_PR_BOOL
   94     | TK_PR_CHAR
   95     | TK_PR_STRING


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 42 75 76 77 78 86
')' (41) 18 42 75 76 77 78 86
'*' (42) 66
'+' (43) 64
',' (44) 16 82 88
'-' (45) 65
'/' (47) 67
':' (58) 7 8 9 10 11 12 13 18
';' (59) 5 6 19 20 27 28
'<' (60) 56
'=' (61) 73 74
'>' (62) 57
'[' (91) 12 13 72 74
']' (93) 12 13 72 74
'{' (123) 26
'}' (125) 26
error (256)
TK_PR_INT (258) 7 12 91
TK_PR_FLOAT (259) 8 13 92
TK_PR_BOOL (260) 9 93
TK_PR_CHAR (261) 10 94
TK_PR_STRING (262) 11 95
TK_PR_IF (263) 75 76
TK_PR_THEN (264) 75 76
TK_PR_ELSE (265) 76
TK_PR_WHILE (266) 77 78
TK_PR_DO (267) 77 78
TK_PR_INPUT (268) 79
TK_PR_OUTPUT (269) 80
TK_PR_RETURN (270) 85
TK_OC_LE (271) 60
TK_OC_GE (272) 61
TK_OC_EQ (273) 62
TK_OC_NE (274) 63
TK_OC_AND (275) 58
TK_OC_OR (276) 59
TK_LIT_INT (277) 12 13 68
TK_LIT_FLOAT (278) 69
TK_LIT_FALSE (279)
TK_LIT_TRUE (280)
TK_LIT_CHAR (281) 70
TK_LIT_STRING (282) 83
TK_IDENTIFICADOR (283) 7 8 9 10 11 12 13 18 43 71 72 73 74 79 86
TOKEN_ERRO (284)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1 2, on right: 0
list_global_decl (48)
    on left: 3 4, on right: 1 4
global_decl (49)
    on left: 5 6, on right: 3 4
declaration (50)
    on left: 7 8 9 10 11, on right: 5 14 19 20
vector_decl (51)
    on left: 12 13, on right: 6
parameter (52)
    on left: 14, on right: 15 16
parameter_list (53)
    on left: 15 16 17, on right: 16 18
function_header (54)
    on left: 18, on right: 25
function_variables (55)
    on left: 19 20 21, on right: 20 25
function_body (56)
    on left: 22, on right: 25
function_list (57)
    on left: 23 24, on right: 1 24
function (58)
    on left: 25, on right: 23 24 39
cmd_block (59)
    on left: 26, on right: 22 35
cmd_list (60)
    on left: 27 28 29, on right: 26 28
cmd (61)
    on left: 30 31 32 33 34 35 36 37, on right: 27 28 75 76 77 78
expr (62)
    on left: 38 39 40 41 42, on right: 42 72 73 74 75 76 77 78 85
primary_expression (63)
    on left: 43 44, on right: 38
arit_expr (64)
    on left: 45 46 47 48 49, on right: 40 84
log_expr (65)
    on left: 50 51 52 53 54 55 56 57, on right: 41
and (66)
    on left: 58, on right: 50
or (67)
    on left: 59, on right: 51
le (68)
    on left: 60, on right: 52
ge (69)
    on left: 61, on right: 53
eq (70)
    on left: 62, on right: 54
ne (71)
    on left: 63, on right: 55
sum (72)
    on left: 64, on right: 46
sub (73)
    on left: 65, on right: 47
mult (74)
    on left: 66, on right: 48
div (75)
    on left: 67, on right: 49
term (76)
    on left: 68 69 70 71 72, on right: 44 45 56 57 58 59 60 61 62 63
    64 65 66 67 89
attrib (77)
    on left: 73 74, on right: 30
flux (78)
    on left: 75 76 77 78, on right: 31
input (79)
    on left: 79, on right: 32
output (80)
    on left: 80, on right: 33
output_list (81)
    on left: 81 82, on right: 80 82
output_element (82)
    on left: 83 84, on right: 81 82
return (83)
    on left: 85, on right: 34
call_function (84)
    on left: 86, on right: 36
argument_list (85)
    on left: 87 88, on right: 86 88
argument (86)
    on left: 89 90, on right: 87 88
type (87)
    on left: 91 92 93 94 95, on right: 18


state 0

    0 $accept: . program $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 2 (program)

    program           go to state 6
    list_global_decl  go to state 7
    global_decl       go to state 8
    declaration       go to state 9
    vector_decl       go to state 10


state 1

    7 declaration: TK_PR_INT . ':' TK_IDENTIFICADOR
   12 vector_decl: TK_PR_INT . ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'

    ':'  shift, and go to state 11


state 2

    8 declaration: TK_PR_FLOAT . ':' TK_IDENTIFICADOR
   13 vector_decl: TK_PR_FLOAT . ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']'

    ':'  shift, and go to state 12


state 3

    9 declaration: TK_PR_BOOL . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 13


state 4

   10 declaration: TK_PR_CHAR . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 14


state 5

   11 declaration: TK_PR_STRING . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 15


state 6

    0 $accept: program . $end

    $end  shift, and go to state 16


state 7

    1 program: list_global_decl . function_list

    TK_PR_INT     shift, and go to state 17
    TK_PR_FLOAT   shift, and go to state 18
    TK_PR_BOOL    shift, and go to state 19
    TK_PR_CHAR    shift, and go to state 20
    TK_PR_STRING  shift, and go to state 21

    function_header  go to state 22
    function_list    go to state 23
    function         go to state 24
    type             go to state 25


state 8

    3 list_global_decl: global_decl .
    4                 | global_decl . list_global_decl

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    TK_PR_INT     [reduce using rule 3 (list_global_decl)]
    TK_PR_FLOAT   [reduce using rule 3 (list_global_decl)]
    TK_PR_BOOL    [reduce using rule 3 (list_global_decl)]
    TK_PR_CHAR    [reduce using rule 3 (list_global_decl)]
    TK_PR_STRING  [reduce using rule 3 (list_global_decl)]

    list_global_decl  go to state 26
    global_decl       go to state 8
    declaration       go to state 9
    vector_decl       go to state 10


state 9

    5 global_decl: declaration . ';'

    ';'  shift, and go to state 27


state 10

    6 global_decl: vector_decl . ';'

    ';'  shift, and go to state 28


state 11

    7 declaration: TK_PR_INT ':' . TK_IDENTIFICADOR
   12 vector_decl: TK_PR_INT ':' . TK_IDENTIFICADOR '[' TK_LIT_INT ']'

    TK_IDENTIFICADOR  shift, and go to state 29


state 12

    8 declaration: TK_PR_FLOAT ':' . TK_IDENTIFICADOR
   13 vector_decl: TK_PR_FLOAT ':' . TK_IDENTIFICADOR '[' TK_LIT_INT ']'

    TK_IDENTIFICADOR  shift, and go to state 30


state 13

    9 declaration: TK_PR_BOOL ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 31


state 14

   10 declaration: TK_PR_CHAR ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 32


state 15

   11 declaration: TK_PR_STRING ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 33


state 16

    0 $accept: program $end .

    $default  accept


state 17

   91 type: TK_PR_INT .

    $default  reduce using rule 91 (type)


state 18

   92 type: TK_PR_FLOAT .

    $default  reduce using rule 92 (type)


state 19

   93 type: TK_PR_BOOL .

    $default  reduce using rule 93 (type)


state 20

   94 type: TK_PR_CHAR .

    $default  reduce using rule 94 (type)


state 21

   95 type: TK_PR_STRING .

    $default  reduce using rule 95 (type)


state 22

   25 function: function_header . function_variables function_body

    TK_PR_INT     shift, and go to state 34
    TK_PR_FLOAT   shift, and go to state 35
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 21 (function_variables)

    declaration         go to state 36
    function_variables  go to state 37


state 23

    1 program: list_global_decl function_list .

    $default  reduce using rule 1 (program)


state 24

   23 function_list: function .
   24              | function . function_list

    TK_PR_INT     shift, and go to state 17
    TK_PR_FLOAT   shift, and go to state 18
    TK_PR_BOOL    shift, and go to state 19
    TK_PR_CHAR    shift, and go to state 20
    TK_PR_STRING  shift, and go to state 21

    $default  reduce using rule 23 (function_list)

    function_header  go to state 22
    function_list    go to state 38
    function         go to state 24
    type             go to state 25


state 25

   18 function_header: type . ':' TK_IDENTIFICADOR '(' parameter_list ')'

    ':'  shift, and go to state 39


state 26

    4 list_global_decl: global_decl list_global_decl .

    $default  reduce using rule 4 (list_global_decl)


state 27

    5 global_decl: declaration ';' .

    $default  reduce using rule 5 (global_decl)


state 28

    6 global_decl: vector_decl ';' .

    $default  reduce using rule 6 (global_decl)


state 29

    7 declaration: TK_PR_INT ':' TK_IDENTIFICADOR .
   12 vector_decl: TK_PR_INT ':' TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    '['  shift, and go to state 40

    $default  reduce using rule 7 (declaration)


state 30

    8 declaration: TK_PR_FLOAT ':' TK_IDENTIFICADOR .
   13 vector_decl: TK_PR_FLOAT ':' TK_IDENTIFICADOR . '[' TK_LIT_INT ']'

    '['  shift, and go to state 41

    $default  reduce using rule 8 (declaration)


state 31

    9 declaration: TK_PR_BOOL ':' TK_IDENTIFICADOR .

    $default  reduce using rule 9 (declaration)


state 32

   10 declaration: TK_PR_CHAR ':' TK_IDENTIFICADOR .

    $default  reduce using rule 10 (declaration)


state 33

   11 declaration: TK_PR_STRING ':' TK_IDENTIFICADOR .

    $default  reduce using rule 11 (declaration)


state 34

    7 declaration: TK_PR_INT . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 42


state 35

    8 declaration: TK_PR_FLOAT . ':' TK_IDENTIFICADOR

    ':'  shift, and go to state 43


state 36

   19 function_variables: declaration . ';'
   20                   | declaration . ';' function_variables

    ';'  shift, and go to state 44


state 37

   25 function: function_header function_variables . function_body

    '{'  shift, and go to state 45

    function_body  go to state 46
    cmd_block      go to state 47


state 38

   24 function_list: function function_list .

    $default  reduce using rule 24 (function_list)


state 39

   18 function_header: type ':' . TK_IDENTIFICADOR '(' parameter_list ')'

    TK_IDENTIFICADOR  shift, and go to state 48


state 40

   12 vector_decl: TK_PR_INT ':' TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 49


state 41

   13 vector_decl: TK_PR_FLOAT ':' TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 50


state 42

    7 declaration: TK_PR_INT ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 51


state 43

    8 declaration: TK_PR_FLOAT ':' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 52


state 44

   19 function_variables: declaration ';' .
   20                   | declaration ';' . function_variables

    TK_PR_INT     shift, and go to state 34
    TK_PR_FLOAT   shift, and go to state 35
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    '{'       reduce using rule 19 (function_variables)
    '{'       [reduce using rule 21 (function_variables)]
    $default  reduce using rule 19 (function_variables)

    declaration         go to state 36
    function_variables  go to state 53


state 45

   26 cmd_block: '{' . cmd_list '}'

    TK_PR_IF          shift, and go to state 54
    TK_PR_WHILE       shift, and go to state 55
    TK_PR_DO          shift, and go to state 56
    TK_PR_INPUT       shift, and go to state 57
    TK_PR_OUTPUT      shift, and go to state 58
    TK_PR_RETURN      shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '{'               shift, and go to state 45

    ';'       reduce using rule 37 (cmd)
    $default  reduce using rule 29 (cmd_list)

    cmd_block      go to state 61
    cmd_list       go to state 62
    cmd            go to state 63
    attrib         go to state 64
    flux           go to state 65
    input          go to state 66
    output         go to state 67
    return         go to state 68
    call_function  go to state 69


state 46

   25 function: function_header function_variables function_body .

    $default  reduce using rule 25 (function)


state 47

   22 function_body: cmd_block .

    $default  reduce using rule 22 (function_body)


state 48

   18 function_header: type ':' TK_IDENTIFICADOR . '(' parameter_list ')'

    '('  shift, and go to state 70


state 49

   12 vector_decl: TK_PR_INT ':' TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 71


state 50

   13 vector_decl: TK_PR_FLOAT ':' TK_IDENTIFICADOR '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 72


state 51

    7 declaration: TK_PR_INT ':' TK_IDENTIFICADOR .

    $default  reduce using rule 7 (declaration)


state 52

    8 declaration: TK_PR_FLOAT ':' TK_IDENTIFICADOR .

    $default  reduce using rule 8 (declaration)


state 53

   20 function_variables: declaration ';' function_variables .

    $default  reduce using rule 20 (function_variables)


state 54

   75 flux: TK_PR_IF . '(' expr ')' TK_PR_THEN cmd
   76     | TK_PR_IF . '(' expr ')' TK_PR_THEN cmd TK_PR_ELSE cmd

    '('  shift, and go to state 73


state 55

   77 flux: TK_PR_WHILE . '(' expr ')' TK_PR_DO cmd

    '('  shift, and go to state 74


state 56

   78 flux: TK_PR_DO . cmd TK_PR_WHILE '(' expr ')'

    TK_PR_IF          shift, and go to state 54
    TK_PR_WHILE       shift, and go to state 55
    TK_PR_DO          shift, and go to state 56
    TK_PR_INPUT       shift, and go to state 57
    TK_PR_OUTPUT      shift, and go to state 58
    TK_PR_RETURN      shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '{'               shift, and go to state 45

    TK_PR_WHILE  [reduce using rule 37 (cmd)]

    cmd_block      go to state 61
    cmd            go to state 75
    attrib         go to state 64
    flux           go to state 65
    input          go to state 66
    output         go to state 67
    return         go to state 68
    call_function  go to state 69


state 57

   79 input: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 76


state 58

   80 output: TK_PR_OUTPUT . output_list

    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_LIT_STRING     shift, and go to state 80
    TK_IDENTIFICADOR  shift, and go to state 81

    arit_expr       go to state 82
    sum             go to state 83
    sub             go to state 84
    mult            go to state 85
    div             go to state 86
    term            go to state 87
    output_list     go to state 88
    output_element  go to state 89


state 59

   85 return: TK_PR_RETURN . expr

    TK_PR_INT         shift, and go to state 17
    TK_PR_FLOAT       shift, and go to state 18
    TK_PR_BOOL        shift, and go to state 19
    TK_PR_CHAR        shift, and go to state 20
    TK_PR_STRING      shift, and go to state 21
    TK_OC_NE          shift, and go to state 90
    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 91
    '('               shift, and go to state 92

    function_header     go to state 22
    function            go to state 93
    expr                go to state 94
    primary_expression  go to state 95
    arit_expr           go to state 96
    log_expr            go to state 97
    and                 go to state 98
    or                  go to state 99
    le                  go to state 100
    ge                  go to state 101
    eq                  go to state 102
    ne                  go to state 103
    sum                 go to state 83
    sub                 go to state 84
    mult                go to state 85
    div                 go to state 86
    term                go to state 104
    type                go to state 25


state 60

   73 attrib: TK_IDENTIFICADOR . '=' expr
   74       | TK_IDENTIFICADOR . '[' expr ']' '=' expr
   86 call_function: TK_IDENTIFICADOR . '(' argument_list ')'

    '['  shift, and go to state 105
    '('  shift, and go to state 106
    '='  shift, and go to state 107


state 61

   35 cmd: cmd_block .

    $default  reduce using rule 35 (cmd)


state 62

   26 cmd_block: '{' cmd_list . '}'

    '}'  shift, and go to state 108


state 63

   27 cmd_list: cmd . ';'
   28         | cmd . ';' cmd_list

    ';'  shift, and go to state 109


state 64

   30 cmd: attrib .

    $default  reduce using rule 30 (cmd)


state 65

   31 cmd: flux .

    $default  reduce using rule 31 (cmd)


state 66

   32 cmd: input .

    $default  reduce using rule 32 (cmd)


state 67

   33 cmd: output .

    $default  reduce using rule 33 (cmd)


state 68

   34 cmd: return .

    $default  reduce using rule 34 (cmd)


state 69

   36 cmd: call_function .

    $default  reduce using rule 36 (cmd)


state 70

   18 function_header: type ':' TK_IDENTIFICADOR '(' . parameter_list ')'

    TK_PR_INT     shift, and go to state 34
    TK_PR_FLOAT   shift, and go to state 35
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    $default  reduce using rule 17 (parameter_list)

    declaration     go to state 110
    parameter       go to state 111
    parameter_list  go to state 112


state 71

   12 vector_decl: TK_PR_INT ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    $default  reduce using rule 12 (vector_decl)


state 72

   13 vector_decl: TK_PR_FLOAT ':' TK_IDENTIFICADOR '[' TK_LIT_INT ']' .

    $default  reduce using rule 13 (vector_decl)


state 73

   75 flux: TK_PR_IF '(' . expr ')' TK_PR_THEN cmd
   76     | TK_PR_IF '(' . expr ')' TK_PR_THEN cmd TK_PR_ELSE cmd

    TK_PR_INT         shift, and go to state 17
    TK_PR_FLOAT       shift, and go to state 18
    TK_PR_BOOL        shift, and go to state 19
    TK_PR_CHAR        shift, and go to state 20
    TK_PR_STRING      shift, and go to state 21
    TK_OC_NE          shift, and go to state 90
    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 91
    '('               shift, and go to state 92

    function_header     go to state 22
    function            go to state 93
    expr                go to state 113
    primary_expression  go to state 95
    arit_expr           go to state 96
    log_expr            go to state 97
    and                 go to state 98
    or                  go to state 99
    le                  go to state 100
    ge                  go to state 101
    eq                  go to state 102
    ne                  go to state 103
    sum                 go to state 83
    sub                 go to state 84
    mult                go to state 85
    div                 go to state 86
    term                go to state 104
    type                go to state 25


state 74

   77 flux: TK_PR_WHILE '(' . expr ')' TK_PR_DO cmd

    TK_PR_INT         shift, and go to state 17
    TK_PR_FLOAT       shift, and go to state 18
    TK_PR_BOOL        shift, and go to state 19
    TK_PR_CHAR        shift, and go to state 20
    TK_PR_STRING      shift, and go to state 21
    TK_OC_NE          shift, and go to state 90
    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 91
    '('               shift, and go to state 92

    function_header     go to state 22
    function            go to state 93
    expr                go to state 114
    primary_expression  go to state 95
    arit_expr           go to state 96
    log_expr            go to state 97
    and                 go to state 98
    or                  go to state 99
    le                  go to state 100
    ge                  go to state 101
    eq                  go to state 102
    ne                  go to state 103
    sum                 go to state 83
    sub                 go to state 84
    mult                go to state 85
    div                 go to state 86
    term                go to state 104
    type                go to state 25


state 75

   78 flux: TK_PR_DO cmd . TK_PR_WHILE '(' expr ')'

    TK_PR_WHILE  shift, and go to state 115


state 76

   79 input: TK_PR_INPUT TK_IDENTIFICADOR .

    $default  reduce using rule 79 (input)


state 77

   68 term: TK_LIT_INT .

    $default  reduce using rule 68 (term)


state 78

   69 term: TK_LIT_FLOAT .

    $default  reduce using rule 69 (term)


state 79

   70 term: TK_LIT_CHAR .

    $default  reduce using rule 70 (term)


state 80

   83 output_element: TK_LIT_STRING .

    $default  reduce using rule 83 (output_element)


state 81

   71 term: TK_IDENTIFICADOR .
   72     | TK_IDENTIFICADOR . '[' expr ']'

    '['  shift, and go to state 116

    $default  reduce using rule 71 (term)


state 82

   84 output_element: arit_expr .

    $default  reduce using rule 84 (output_element)


state 83

   46 arit_expr: sum .

    $default  reduce using rule 46 (arit_expr)


state 84

   47 arit_expr: sub .

    $default  reduce using rule 47 (arit_expr)


state 85

   48 arit_expr: mult .

    $default  reduce using rule 48 (arit_expr)


state 86

   49 arit_expr: div .

    $default  reduce using rule 49 (arit_expr)


state 87

   45 arit_expr: term .
   64 sum: term . '+' term
   65 sub: term . '-' term
   66 mult: term . '*' term
   67 div: term . '/' term

    '+'  shift, and go to state 117
    '-'  shift, and go to state 118
    '*'  shift, and go to state 119
    '/'  shift, and go to state 120

    $default  reduce using rule 45 (arit_expr)


state 88

   80 output: TK_PR_OUTPUT output_list .

    $default  reduce using rule 80 (output)


state 89

   81 output_list: output_element .
   82            | output_element . ',' output_list

    ','  shift, and go to state 121

    $default  reduce using rule 81 (output_list)


state 90

   63 ne: TK_OC_NE . term

    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 81

    term  go to state 122


state 91

   43 primary_expression: TK_IDENTIFICADOR .
   71 term: TK_IDENTIFICADOR .
   72     | TK_IDENTIFICADOR . '[' expr ']'

    '['  shift, and go to state 116

    TK_PR_ELSE   reduce using rule 43 (primary_expression)
    TK_PR_ELSE   [reduce using rule 71 (term)]
    TK_PR_WHILE  reduce using rule 43 (primary_expression)
    TK_PR_WHILE  [reduce using rule 71 (term)]
    ';'          reduce using rule 43 (primary_expression)
    ';'          [reduce using rule 71 (term)]
    ']'          reduce using rule 43 (primary_expression)
    ']'          [reduce using rule 71 (term)]
    ')'          reduce using rule 43 (primary_expression)
    ')'          [reduce using rule 71 (term)]
    $default     reduce using rule 71 (term)


state 92

   42 expr: '(' . expr ')'

    TK_PR_INT         shift, and go to state 17
    TK_PR_FLOAT       shift, and go to state 18
    TK_PR_BOOL        shift, and go to state 19
    TK_PR_CHAR        shift, and go to state 20
    TK_PR_STRING      shift, and go to state 21
    TK_OC_NE          shift, and go to state 90
    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 91
    '('               shift, and go to state 92

    function_header     go to state 22
    function            go to state 93
    expr                go to state 123
    primary_expression  go to state 95
    arit_expr           go to state 96
    log_expr            go to state 97
    and                 go to state 98
    or                  go to state 99
    le                  go to state 100
    ge                  go to state 101
    eq                  go to state 102
    ne                  go to state 103
    sum                 go to state 83
    sub                 go to state 84
    mult                go to state 85
    div                 go to state 86
    term                go to state 104
    type                go to state 25


state 93

   39 expr: function .

    $default  reduce using rule 39 (expr)


state 94

   85 return: TK_PR_RETURN expr .

    $default  reduce using rule 85 (return)


state 95

   38 expr: primary_expression .

    $default  reduce using rule 38 (expr)


state 96

   40 expr: arit_expr .

    $default  reduce using rule 40 (expr)


state 97

   41 expr: log_expr .

    $default  reduce using rule 41 (expr)


state 98

   50 log_expr: and .

    $default  reduce using rule 50 (log_expr)


state 99

   51 log_expr: or .

    $default  reduce using rule 51 (log_expr)


state 100

   52 log_expr: le .

    $default  reduce using rule 52 (log_expr)


state 101

   53 log_expr: ge .

    $default  reduce using rule 53 (log_expr)


state 102

   54 log_expr: eq .

    $default  reduce using rule 54 (log_expr)


state 103

   55 log_expr: ne .

    $default  reduce using rule 55 (log_expr)


state 104

   44 primary_expression: term .
   45 arit_expr: term .
   56 log_expr: term . '<' term
   57         | term . '>' term
   58 and: term . TK_OC_AND term
   59 or: term . TK_OC_OR term
   60 le: term . TK_OC_LE term
   61 ge: term . TK_OC_GE term
   62 eq: term . TK_OC_EQ term
   64 sum: term . '+' term
   65 sub: term . '-' term
   66 mult: term . '*' term
   67 div: term . '/' term

    TK_OC_LE   shift, and go to state 124
    TK_OC_GE   shift, and go to state 125
    TK_OC_EQ   shift, and go to state 126
    TK_OC_AND  shift, and go to state 127
    TK_OC_OR   shift, and go to state 128
    '<'        shift, and go to state 129
    '>'        shift, and go to state 130
    '+'        shift, and go to state 117
    '-'        shift, and go to state 118
    '*'        shift, and go to state 119
    '/'        shift, and go to state 120

    TK_PR_ELSE   reduce using rule 44 (primary_expression)
    TK_PR_ELSE   [reduce using rule 45 (arit_expr)]
    TK_PR_WHILE  reduce using rule 44 (primary_expression)
    TK_PR_WHILE  [reduce using rule 45 (arit_expr)]
    ';'          reduce using rule 44 (primary_expression)
    ';'          [reduce using rule 45 (arit_expr)]
    ']'          reduce using rule 44 (primary_expression)
    ']'          [reduce using rule 45 (arit_expr)]
    ')'          reduce using rule 44 (primary_expression)
    ')'          [reduce using rule 45 (arit_expr)]
    $default     reduce using rule 44 (primary_expression)


state 105

   74 attrib: TK_IDENTIFICADOR '[' . expr ']' '=' expr

    TK_PR_INT         shift, and go to state 17
    TK_PR_FLOAT       shift, and go to state 18
    TK_PR_BOOL        shift, and go to state 19
    TK_PR_CHAR        shift, and go to state 20
    TK_PR_STRING      shift, and go to state 21
    TK_OC_NE          shift, and go to state 90
    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 91
    '('               shift, and go to state 92

    function_header     go to state 22
    function            go to state 93
    expr                go to state 131
    primary_expression  go to state 95
    arit_expr           go to state 96
    log_expr            go to state 97
    and                 go to state 98
    or                  go to state 99
    le                  go to state 100
    ge                  go to state 101
    eq                  go to state 102
    ne                  go to state 103
    sum                 go to state 83
    sub                 go to state 84
    mult                go to state 85
    div                 go to state 86
    term                go to state 104
    type                go to state 25


state 106

   86 call_function: TK_IDENTIFICADOR '(' . argument_list ')'

    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 81

    $default  reduce using rule 90 (argument)

    term           go to state 132
    argument_list  go to state 133
    argument       go to state 134


state 107

   73 attrib: TK_IDENTIFICADOR '=' . expr

    TK_PR_INT         shift, and go to state 17
    TK_PR_FLOAT       shift, and go to state 18
    TK_PR_BOOL        shift, and go to state 19
    TK_PR_CHAR        shift, and go to state 20
    TK_PR_STRING      shift, and go to state 21
    TK_OC_NE          shift, and go to state 90
    TK_LIT_INT        shift, and go to state 77
    TK_LIT_FLOAT      shift, and go to state 78
    TK_LIT_CHAR       shift, and go to state 79
    TK_IDENTIFICADOR  shift, and go to state 91
    '('               shift, and go to state 92
